--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,62 +3,33 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
 
-@book{einstein1956investigations,
+@article{Imam2025EGFR,
+  abbr={Researh},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
+  title={L858R/L718Q and L858R/L792H Mutations of EGFR Inducing Resistance Against Osimertinib by Forming Additional Hydrogen Bonds},
+  author={Ibrahim A Imam, Shatha Al Adawi, Xiaoqi Liu, Sally Ellingson, Christine F Brainson, Hunter NB Moseley, Ralph Zinner, Shulin Zhang, Qing Shao},
+  journal={Proteins: Structure, Function, and Bioinformatics},
+  volume={93},
+  number={3},
+  pages={673--683},
+  year={2025},
   publisher={American Association of Physics Teachers}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{Imam2025Langmuir,
+  abbr={Lang.},
+  title={Integrating Protein Language Model and Molecular Dynamics Simulations to Discover Antibiofouling Peptides},
+  author={Ibrahim A Imam, Shea Bailey, Duolin Wang, Shuai Zeng, Dong Xu, Qing Shao},
+  abstract={Antibiofouling peptide materials prevent the nonspecific adsorption of proteins on devices, enabling them to perform their designed functions as desired in complex biological environments. Due to their importance, research on antibiofouling peptide materials has been one of the central subjects of interfacial engineering. However, only a few antibiofouling peptide sequences have been developed. This narrow scope of antibiofouling peptide materials limits their capacity to adapt to the broad spectrum of application scenarios. To address this issue, we searched for antibiofouling peptides in the vast sequence pool of the microbiome library using a combination of deep learning-based high-throughput search and molecular dynamics (MD) simulations.},
+  journal={Langmuir},
+  volume={41},
+  issue={1},
+  pages={811--821},
+  year={2024},
+  publisher=ACS,
+  doi={https://doi.org/10.1021/acs.langmuir.4c04140}
+  google_scholar_id={_xCno5oAAAAJ}
 }
 
 @article{einstein1905molekularkinetischen,
