--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,7 @@
   pages={811--821},
   year={2024},
   publisher=ACS,
-  doi={https://doi.org/10.1021/acs.langmuir.4c04140}
+  doi={https://doi.org/10.1021/acs.langmuir.4c04140i},
   google_scholar_id={_xCno5oAAAAJ}
 }
 
